force-app/main/default/objects/Retail_Order__c/fields/Add_Lead_Visit_Visit_Id__c.field-meta.xml
<CustomField>
    <fullName>Add_Lead_Visit_Visit_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Lead Visit - Visit Id</label>
    <referenceTo>Retail_Lead_Visit__c</referenceTo>
    <relationshipLabel>Retail Orders</relationshipLabel>
    <relationshipName>Retail_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>