force-app/main/default/objects/Retail_Order__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <label>Advance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>