force-app/main/default/objects/Retail_Order__c/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <label>Advance Payment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>