force-app/main/default/objects/Retail_Order__c/fields/Advance_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Date__c</fullName>
    <label>Advance Payment Date</label>
    <type>Date</type>
</CustomField>