force-app/main/default/objects/Retail_Order__c/fields/Advance_Payment_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Receipt__c</fullName>
    <label>Advance Payment Receipt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>