force-app/main/default/objects/Retail_Order__c/fields/Advance_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Advance_Receipt_Date__c</fullName>
    <label>Advance Receipt Date</label>
    <type>Date</type>
</CustomField>