force-app/main/default/objects/Retail_Order__c/fields/Cash_on_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_Delivery__c</fullName>
    <label>Cash on Delivery</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>