force-app/main/default/objects/Retail_Order__c/fields/Closest_Tranport_Branch__c.field-meta.xml
<CustomField>
    <fullName>Closest_Tranport_Branch__c</fullName>
    <label>Closest Tranport Branch</label>
    <type>TextArea</type>
</CustomField>