force-app/main/default/objects/Retail_Order__c/fields/Customer_Order_Counter__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Counter__c</fullName>
    <label>Customer Order Counter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>