force-app/main/default/objects/Retail_Order__c/fields/Dispatch_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dispatch Warehouse</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Orders (Dispatch Warehouse)</relationshipLabel>
    <relationshipName>Retail_Orders1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>