force-app/main/default/objects/Retail_Order__c/fields/Driver_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Phone_Number__c</fullName>
    <label>Driver Phone Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>