force-app/main/default/objects/Retail_Order__c/fields/Final_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount_Owed__c</fullName>
    <formula>Credit__c  +  Cash_on_Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>