force-app/main/default/objects/Retail_Order__c/fields/Final_Amount_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount_Receipt_Date__c</fullName>
    <label>Final Amount Receipt Date</label>
    <type>Date</type>
</CustomField>