force-app/main/default/objects/Retail_Order__c/fields/Freight_Charge_Bearer_values__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge_Bearer_values__c</fullName>
    <label>Freight Charge Bearer values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avana</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>