force-app/main/default/objects/Retail_Order__c/fields/Has_this_Customer_faced_issues_with_orde__c.field-meta.xml
<CustomField>
    <fullName>Has_this_Customer_faced_issues_with_orde__c</fullName>
    <label>Has this Customer faced issue with order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>