force-app/main/default/objects/Retail_Order__c/fields/Is_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Is_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accounts</label>
    <type>Checkbox</type>
</CustomField>