force-app/main/default/objects/Retail_Order__c/fields/Is_Final_Pay_Receipt_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Is_Final_Pay_Receipt_on_Time__c</fullName>
    <label>Is Final Pay Receipt on Time?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>