force-app/main/default/objects/Retail_Order__c/fields/Is_Repeat_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Repeat_Customer__c</fullName>
    <label>Is Repeat Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>