force-app/main/default/objects/Retail_Order__c/fields/Is_Return__c.field-meta.xml
<CustomField>
    <fullName>Is_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Return</label>
    <type>Checkbox</type>
</CustomField>