force-app/main/default/objects/Retail_Order__c/fields/IsExpectedDispatch__c.field-meta.xml
<CustomField>
    <fullName>IsExpectedDispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExpectedDispatch</label>
    <type>Checkbox</type>
</CustomField>