force-app/main/default/objects/Retail_Order__c/fields/IsFinalPay__c.field-meta.xml
<CustomField>
    <fullName>IsFinalPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFinalPay</label>
    <type>Checkbox</type>
</CustomField>