force-app/main/default/objects/Retail_Order__c/fields/Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Discount__c</fullName>
    <label>% Order Discount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>