force-app/main/default/objects/Retail_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail Products</fullName>
                <default>true</default>
                <label>Retail Products</label>
            </value>
            <value>
                <fullName>Internal Stock Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>