force-app/main/default/objects/Retail_Order__c/fields/Prefered_Transport_Company__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Transport_Company__c</fullName>
    <label>Prefered Transport Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMRUT LOGISTICS (ARCO)</fullName>
            </value>
            <value>
                <fullName>Avinash Cargo Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Batcotranslogistics Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>CHINTAN FREIGHT CARRIER</fullName>
            </value>
            <value>
                <fullName>GIRNAR CARGO ESCORT</fullName>
            </value>
            <value>
                <fullName>Lavakesh Roadlines</fullName>
            </value>
            <value>
                <fullName>LOCAL TRANSPORT</fullName>
            </value>
            <value>
                <fullName>OWN VEHICLE</fullName>
            </value>
            <value>
                <fullName>RISHABH ROADLINES</fullName>
            </value>
            <value>
                <fullName>RITWIZ ROADLINES</fullName>
            </value>
            <value>
                <fullName>Balaji Transport Company</fullName>
            </value>
            <value>
                <fullName>SECURE TRANS LOGISTICS</fullName>
            </value>
            <value>
                <fullName>Shree Nashik Goods TransportCo.</fullName>
                <label>Shree Nashik Goods Transport Co.</label>
            </value>
            <value>
                <fullName>Shree Shyam Logistics</fullName>
            </value>
            <value>
                <fullName>VISHWA LOGISTICS</fullName>
            </value>
            <value>
                <fullName>VRL Logistics Limited</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Shree Krishna Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>