force-app/main/default/objects/Retail_Order__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <label>Advance Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>