force-app/main/default/objects/Retail_Order__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Owner</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Orders</relationshipLabel>
    <relationshipName>Retail_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>