force-app/main/default/objects/Retail_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exec Discount Approval</fullName>
                <label>Awaiting Discount Approval</label>
            </value>
            <value>
                <fullName>Awaiting Exec Approval</fullName>
                <label>Awaiting Credit Approval</label>
            </value>
            <value>
                <fullName>Awaiting Accounts</fullName>
                <label>Awaiting Accounts Approval</label>
            </value>
            <value>
                <fullName>Payment Approved</fullName>
            </value>
            <value>
                <fullName>Upload Packing List</fullName>
            </value>
            <value>
                <fullName>Packing List in Process</fullName>
            </value>
            <value>
                <fullName>Production Approved</fullName>
            </value>
            <value>
                <fullName>Ready For Dispatch</fullName>
                <label>Commercial : Ready For Dispatch</label>
            </value>
            <value>
                <fullName>Dispatched Awaiting Final Payment</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Awaiting Manager Approval</fullName>
                <isActive>false</isActive>
                <label>Awaiting Manager Approval</label>
            </value>
            <value>
                <fullName>Commercial : Instock - Prepare Invoice</fullName>
                <isActive>false</isActive>
                <label>Commercial : Instock - Prepare Invoice</label>
            </value>
            <value>
                <fullName>Confirm Stock Receipt</fullName>
                <isActive>false</isActive>
                <label>Confirm Stock Receipt</label>
            </value>
            <value>
                <fullName>Exec Credit Approval</fullName>
                <isActive>false</isActive>
                <label>Exec Credit Approval</label>
            </value>
            <value>
                <fullName>Exec Return Approval</fullName>
                <isActive>false</isActive>
                <label>Exec Return Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>