force-app/main/default/objects/Retail_Order__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Orders (Warehouse)</relationshipLabel>
    <relationshipName>Retail_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>