force-app/main/default/objects/Retail_Order__c/listViews/Accounts_Orders_on_hold.listView-meta.xml
<ListView>
    <fullName>Accounts_Orders_on_hold</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Hold</value>
    </filters>
    <label>Orders on hold</label>
</ListView>