force-app/main/default/objects/Retail_Order__c/listViews/Canceled.listView-meta.xml
<ListView>
    <fullName>Canceled</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>Order Cancelled</label>
</ListView>