force-app/main/default/objects/Retail_Order__c/listViews/Has_Been_Dispatched.listView-meta.xml
<ListView>
    <fullName>Has_Been_Dispatched</fullName>
    <columns>NAME</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Retail_Customer__c</columns>
    <columns>Expected_Delivery_Date_Customer__c</columns>
    <columns>Dispatch_Warehouse__c</columns>
    <columns>Retail_Warehouse__c</columns>
    <columns>Invoice_Upload_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Dispatched Awaiting Final Payment</value>
    </filters>
    <label>Dispatched Confirm Final Payment</label>
    <sharedTo>
        <group>Accounts</group>
    </sharedTo>
</ListView>