force-app/main/default/objects/Retail_Order__c/listViews/Payment_Approved.listView-meta.xml
<ListView>
    <fullName>Payment_Approved</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Order_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Payment Approved</value>
    </filters>
    <label>Payment Approved</label>
    <sharedTo>
        <group>Production</group>
    </sharedTo>
</ListView>