force-app/main/default/objects/Retail_Order__c/listViews/Pending_Discount_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Discount_Approval</fullName>
    <columns>NAME</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Credit__c</columns>
    <columns>Dispatch_Warehouse__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Warehouse__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Exec Discount Approval</value>
    </filters>
    <label>Awaiting Discount Approval</label>
    <sharedTo>
        <group>Manager_Level</group>
    </sharedTo>
</ListView>