force-app/main/default/objects/Retail_Order__c/listViews/Production_Approved.listView-meta.xml
<ListView>
    <fullName>Production_Approved</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Retail_Customer__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Expected_Delivery_Date_Customer__c</columns>
    <columns>Dispatch_Warehouse__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Production Approved</value>
    </filters>
    <label>Production Approved</label>
    <sharedTo>
        <group>Commercial</group>
    </sharedTo>
</ListView>