force-app/main/default/objects/Retail_Order__c/listViews/Production_Packaging_list_inProgress.listView-meta.xml
<ListView>
    <fullName>Production_Packaging_list_inProgress</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Packing List in Process</value>
    </filters>
    <label>Production : Packaging List In Progress</label>
    <sharedTo>
        <group>Production</group>
    </sharedTo>
</ListView>