force-app/main/default/objects/Retail_Order__c/listViews/Production_Uploading_Packaging_List.listView-meta.xml
<ListView>
    <fullName>Production_Uploading_Packaging_List</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Upload Packing List</value>
    </filters>
    <label>Production : Upload Packing List</label>
    <sharedTo>
        <group>Production</group>
    </sharedTo>
</ListView>